# wandr

./: .dockerignore  .env.example  .gitignore  NOTICE  README.md  pyproject.toml
.github/workflows/: checks.yml
adapters/wandr/: README.md  pyproject.toml
adapters/wandr/src/wandr/: adapter.py  main.py
adapters/wandr/src/wandr/origin/: instruction_macro.md.jinja
adapters/wandr/src/wandr/utils/: consistency.py  source_files.py
agents/relay/: README.md  __init__.py  agent.py  core.py  harborpatch.py  lifecycle.py  pyproject.toml
agents/relay/prompts/: __init__.py  system.md.jinja
agents/relay/providers/: __init__.py  output.py  request.py
agents/relay/providers/anthropic/: __init__.py  endpoint.py  events.py  files.py
agents/relay/providers/exa/: __init__.py  endpoint.py
agents/relay/providers/gemini/: __init__.py  endpoint.py
agents/relay/providers/openai/: __init__.py  endpoint.py  events.py  files.py
agents/relay/providers/parallel/: __init__.py  endpoint.py
agents/relay/providers/perplexity/: __init__.py  endpoint.py  events.py  files.py
configs/: smoke-all.yaml  smoke.yaml  validation.yaml  wandr.yaml
datasets/wandr/: dataset.toml
datasets/wandr/abm-provider-commercial-provenance/: instruction.md  task.toml
datasets/wandr/accounting-ai-claims/: instruction.md  task.toml
datasets/wandr/acma-rrl-licensee-provenance/: instruction.md  task.toml
datasets/wandr/acnc-kmp-consistency/: instruction.md  task.toml
datasets/wandr/active-climate-hardtech-opportunities/: instruction.md  task.toml
datasets/wandr/acumatica-distribution-partner-evidence/: instruction.md  task.toml
datasets/wandr/adult-guardianship-programs/: instruction.md  task.toml
datasets/wandr/adventure-resort-hiring-provenance/: instruction.md  task.toml
datasets/wandr/aerospace-authorized-distribution-reciprocity/: instruction.md  task.toml
datasets/wandr/africa-agribusiness-operators/: instruction.md  task.toml
datasets/wandr/africa-entrepreneur-support/: instruction.md  task.toml
datasets/wandr/africa-fertilizer-associations/: instruction.md  task.toml
datasets/wandr/africa-project-attrition/: instruction.md  task.toml
datasets/wandr/agency-platform-partnerships/: instruction.md  task.toml
reference/: wandr_paper.LICENSE
reference/wandr_tasks/: README.md
scripts/: env_exec.py  validate_configs.py  wandr
(+5553 files in other folders)
